Fix shift selection, rename folders to groups, and some more refactoring

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -17,20 +17,5 @@ $border-radius-sm: 3px;
 // Fonts
 $font-folder: '../assets/fonts/' !default;
 
-// Icons
-$icons: (
-  carret-up: '\e907',
-  carret-down: '\e908',
-  carret-left: '\e909',
-  carret-right: '\e90a',
-  close: '\e906',
-  binoculars: '\e900',
-  eyeDropper: '\e901',
-  folder: '\e902',
-  plus: '\e903',
-  ruler: '\e904',
-  trash: '\e905'
-);
-
 // Shadows
 $shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
